--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.DetailActivity"></activity>
+        <activity android:name=".Activities.SearchResultActivity"></activity>
+        <activity android:name=".Activities.DetailActivity" />
         <activity
             android:name=".Activities.MainActivity"
             android:label="@string/app_name"
